[Bug Fix] Fixed layout issues

--- a/client/src/pages/EventsPage/EventsPage.module.scss
+++ b/client/src/pages/EventsPage/EventsPage.module.scss
@@ -5,6 +5,7 @@
   justify-content: space-around;
 
   height: 50vh;
+  min-height: 500px;
   padding: 0 10vw;
 
   @media (max-width: 768px) {
